-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.0-beta1
-
-
39d04fa88632705a207585c282c1ca58e4dfea68 (qt-creator/qt-creator/6.0)
Steps to reproduce:
- open a bigger project (QC?)
- open a source file of the project
- hit Ctrl+K to bring up locator
- use "f " for file search
- the current folder may have directory icons if it has sub directories - if so, step up by using the ".." entry
Current result:
- folders do not have a directory icon (except the current folder's subdirectories)
For Gerrit Dashboard: QTCREATORBUG-26411 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
379080,3 | Utils: Clean path when transforming into QFileInfo | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |